--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ dash-table==4.6.0
 plotly==4.3.0
 plotly-express==0.4.1
 plotly-geo==1.0.0
-matplotlib==3.1.3
-matplotlib-base==3.1.3
+# matplotlib==3.1.3
+# matplotlib-base==3.1.3
 numpy==1.17.4
